# model-oled-pb

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  oled-80.cfg  setup.cfg  tox.ini
.ccls-cache/@Users@bigtreehouse@model_routine@oled-80/: icon.h.blob
docs/: features.md  firmware_update.md  how_to_flash_img.md  img_format.md  index.md  oled_util_guide.md  update_graphics.md
docs/en/: firmware_update.md  img_format.md  index.md  updpate_graphics.md
docs/zh/: features.md  oled_util_guide.md  update_graphics.md
dxf/: #main(f區)--2023-03-19(更新)HANK.dxf  #switch-board-edge.dxf  breakout.dxf  keepout.dxf  main(f區)--2023-03-19(更新)HANK.dxf  main.dxf  sw_ref.dxf  switch-board-edge.dxf
dxf/to_barry/: #main-2022-11-19.dxf  #main-v0-2022-11-20.dxf  main-2022-11-19.dxf  main-v0-2022-11-20.dxf  main-v0-2022-11-21-add-c3.dxf  main-v0-2022-11-21.dxf
en/: index.html
en/features/: index.html
en/firmware_update/: index.html
en/img_format/: index.html
en/updpate_graphics/: index.html
en/via/: index.html
firmware_update/: index.html
keymake/: __init__.py  __main__.py  painter.py  qpf.py
layout/: conn_placement.json  default_layout.kle  fpc-12.dxf  layout.json  matrix.json  oled-80.json  oled-80.kle  oled-80.mlayout  switch_placement.json  via.kle
oled_util_guide/: index.html
release/: bongocat-resized.qgf  model-oled.json
scripts/: README.md  gen_mfile.py  png2rgb565.py  switch_board.py
search/: search_index.json
site/: index.html
tests/: test_cli.py  test_png2rgb.py
update_graphics/: index.html
via/: index.html
zh/: index.html
(+103 files in other folders)
