[metadata]
name = oled-utils
long_description = file: README.md
author = eugenepy
author_email = tn00372136@gmail.com
license = apache license 2.0

[options]
python_requires = >= 3.6.5
packages = find:
test_suite = tests
install_requires = pillow 
                   click

[options.entry_points]
console_scripts = 
    oled-utils = keymake.__main__:oled_utils
